<resources>
    <string name="app_name">Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="unloginicon">need to login</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="register">注册</string>
    <string name="enterPhoneNumber">请输入手机号</string>
    <string name="enterPassword">请输入6–16位密码</string>
    <string name="Insert">添加</string>
    <string name="Delete">删除</string>
    <string name="DeleteAll">清空</string>
    <string name="Update">修改</string>
    <string name="enterName">请输入用户名</string>
    <string name="checkPassword">请确认密码</string>
    <string name="sexMale">男</string>
    <string name="sexFemale">女</string>
    <string name="sexUnknown">未知</string>
    <string name="chooseSex">性别</string>
    <string name="Save">保存</string>
    <string name="goBack">返回</string>
    <string name="startVideos">初始播放列表</string>
    <string name="startHint">单击视频进入</string>
    <string name="videoNodeSons">Sons: %s</string>
    <string name="Root">P0</string>
    <string name="Jump">跳转</string>
    <string name="Index">P%d</string>
    <string name="manageProjects">我的互动视频</string>
    <string name="name">昵称</string>
    <string name="telephoneNumber">手机号</string>
    <string name="email">邮箱</string>
    <string name="birthday">生日</string>
    <string-array name="judges_array">
        <item>大于</item>
        <item>小于</item>
        <item>等于</item>
    </string-array>
</resources>