<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="UserData"
            type="com.example.contact_client.UserViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.InitActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline5">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <ImageView
                android:id="@+id/unloginIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/login"
                android:src="@drawable/ic_baseline_sentiment_satisfied_alt_24"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:srcCompat="@drawable/ic_baseline_face_24"
                tools:srcCompat="@drawable/ic_baseline_sentiment_satisfied_alt_24" />

            <TextView
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:maxLength="@integer/PasswordMaxlen"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enterPhoneNumber"
                android:inputType="number"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/forgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/forgetPassword"
                android:textColor="@android:color/holo_red_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/loginButton"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@android:color/holo_red_light"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/login"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>